overflow issue fix

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@ body {
 #wrapper {
   background-color: #f4f4f4;
   transition: background-color 0.5s ease;
+  overflow: hidden;
+  width: 100vw;
 }
 
 .header-nav {
